[tool.poetry]
name = "adatelemzes"
version = "0.1.0"
description = ""
authors = ["david00721 <david007214@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.3"
ipykernel = "^6.26.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
plotly = "^5.18.0"
missingno = "^0.5.2"
nbformat = "^5.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
